# zamdach2022

./: README.md
docs/: brainstorming.md  daughterboard.xcf  mainboard-connect1.xcf
espfw/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
espfw/main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  i2c.c  i2c.h  lps25hb.c  lps25hb.h  ltr390.c  ltr390.h  network.c  network.h  rg15.c  secrets.h.template  sen50.c  sht4x.c  submit.c  submit.h  tsl2591.c  tsl2591.h  webserver.c  webserver.h  windsens.c  windsens.h  zamdach2022_main.c
espfw/main/ulp/: windsensctr.S
